# HelloGraphicsAPI

./: .gitignore  CMakeLists.txt  README.md  TODO.md  env.sh  temp
include/: el_debug.h  el_image.h  el_math.h  graphics_depth_stencil.h  graphics_driver.h  graphics_sampler.h
sample/: CMakeLists.txt  SlideContext.h  SlideContext.mm  legacy.cpp  sdl.mm  test.cpp
sample/bunny/: CMakeLists.txt  bunny.cpp  graphics_window.cpp  main.cpp  main.frag  main.vert  mesh.h
sample/bunny-osx/: CMakeLists.txt  bunny-osx.mm  metal_context.h  metal_context.mm  metal_driver.cpp  metal_driver.h  metal_driver.mm  metal_types.cpp  metal_types.h  renderer.cpp  renderer.h
sample/bunny-osx2/: bunny.cpp  bunny.mm
sample/bunny2/: bunny.cpp  graphics_window.cpp  graphics_window.h  main.vert
sample/common/: sample.cpp  sample.h
sample/context/: context.cpp  main.cpp  platform_driver.h  platform_driver_wgl.cpp  platform_driver_wgl.h  wgl_context.cpp  wgl_context.h
sample/cow/: cow.mm
sample/depth/: CMakeLists.txt  depth.mm
sample/driver/: driver.cpp  driver.mm
sample/image/: CMakeLists.txt  image.cpp  main.cpp
sample/llvm-casting/: CMakeLists.txt  main.cpp
sample/mtl/: CMakeLists.txt  metal_context.h  metal_driver.h  metal_driver.mm  metal_resources.h  metal_resources.mm  metal_states.h  metal_states.mm  metal_types.h  metal_types.mm  mtl.mm  native_window_helper.h
sample/mtlpp/: 04_window.cpp
sample/multicontext/: CMakeLists.txt  main.cpp  main.mm  platform.h  platform_driver.h  platform_driver_wgl.cpp  platform_driver_wgl.h  platform_nsgl.h  platform_nsgl.mm  platform_wgl.cpp  platform_wgl.h  wgl_context.cpp  wgl_context.h
sample/multithread/: main.cpp  platform_driver.h  platform_driver_nsgl.cpp  platform_driver_wgl.cpp  platform_driver_wgl.h  wgl_context.h
sample/osx/: GameViewController.mm.orig  mtl_renderer.cpp.orig
sample/osx-window/: 04_window.cpp  05_effect.cpp  window.hpp
sample/render-thread/: main.cpp  platform_driver.h  platform_driver_wgl.cpp
sample/sampleapp/: CMAkeLists.txt  mesh.cpp  mesh.h  native_window_helper.h  native_window_helper.mm  native_window_helper_cocoa.mm  native_window_helper_windows.cpp
sample/sdl/: CMakeLists.txt  sdl.mm  sdl.mm.orig
sample/shader_converter/: SlideShow.gles.h  SlideShow.glsl.frag.h  SlideShow.glsl.h  SlideShow.glsl.vert.h  SlideShow.nolight.glsl.frag.h  SlideShow.nolight.glsl.vert.h
sample/sharing/: CMakeLists.txt  main.cpp  sharing.cpp
sample/triangle/: triangle.cpp
sample/uniform/: state.cpp  uniform.cpp
sample/window/: window.cpp
source/: CMakeLists.txt  casting.h  debug.cpp  debug.h  el_debug.cpp  el_image.cpp  el_image.h  el_predefine.h  gl.cpp  gl.h  gl_buffer.cpp  gl_buffer.h  gl_context.cpp  gl_context.h  gl_device.cpp  gl_device.h  gl_device_context.cpp  gl_device_context.h  gl_profile.cpp  gl_profile.h  gl_program.cpp  gl_program.h  gl_shader.cpp  gl_shader.h  gl_texture.cpp  gl_texture.h  gl_types.cpp  gl_types.h  graphics_buffer.cpp  graphics_buffer.h  graphics_context.cpp  graphics_context.h  graphics_data.cpp  graphics_data.h  graphics_depth_stencil.cpp  graphics_depth_stencil.h  graphics_device.cpp  graphics_device.h  graphics_device_context.cpp  graphics_device_context.h  (+41 more)
source/Metal/: mtl_buffer.cpp  mtl_buffer.h  mtl_context.cpp  mtl_context.h  mtl_depth_stencil.cpp  mtl_depth_stencil.h  mtl_device.cpp  mtl_device.h  mtl_device_context.cpp  mtl_device_context.h  mtl_input_layout.cpp  mtl_input_layout.h  mtl_program.cpp  mtl_program.h  mtl_render_pipeline.cpp  mtl_render_pipeline.h  mtl_sampler.cpp  mtl_sampler.h  mtl_shader.cpp  mtl_shader.h  mtl_texture.cpp  mtl_texture.h  mtl_types.cpp  mtl_types.h  mtlpp.hpp  mtlpp.mm
source/OSX/: main.mm  mtl_renderer.cpp  mtl_renderer.h
source/OpenGL/: gl.cpp  gl.h  gl_buffer.cpp  gl_buffer.h  gl_context.cpp  gl_context.h  gl_device.cpp  gl_device.h  gl_device_context.cpp  gl_device_context.h  gl_headers.cpp  gl_headers.h  gl_input_layout.cpp  gl_input_layout.h  gl_profile.cpp  gl_profile.h  gl_program.cpp  gl_program.h  gl_shader.cpp  gl_shader.h  gl_texture.cpp  gl_texture.h  gl_types.cpp  gl_types.h
source/lib3d/: CMakeLists.txt  graphics_context.cpp  graphics_data.cpp  graphics_data.h  graphics_depth_stencil.cpp  graphics_depth_stencil.h  graphics_device.cpp  graphics_device.h  graphics_driver.cpp  graphics_driver.h  graphics_input_layout.cpp  graphics_input_layout.h  graphics_pipeline.cpp  graphics_pipeline.h  graphics_platform.cpp  graphics_platform.h  graphics_program.cpp  graphics_program.h  graphics_sampler.cpp  graphics_sampler.h  graphics_shader.cpp  graphics_texture.cpp  graphics_texture.h  graphics_types.cpp  graphics_types.h  math_types.h
source/lib3d/Metal/: metal_context.h  metal_context.mm  metal_driver.h  metal_driver.mm  metal_platform.h  metal_platform.mm  metal_resources.h  metal_resources.mm  metal_states.h  metal_states.mm  metal_types.h  metal_types.mm  mtl_buffer.cpp  mtl_buffer.cpp2  mtl_buffer.h  mtl_context.cpp  mtl_context.h  mtl_context.mm  mtl_depth_stencil.cpp  mtl_depth_stencil.h  mtl_depth_stencil.h2  mtl_device.cpp  mtl_device.h  mtl_device.h2  mtl_input_layout.cpp  mtl_input_layout.cpp2  mtl_input_layout.h  mtl_program.cpp  mtl_program.h  mtl_render_pipeline.cpp  mtl_render_pipeline.h  mtl_sampler.cpp  mtl_sampler.h  mtl_shader.cpp  mtl_shader.h  mtl_texture.cpp  mtl_texture.h  mtl_types.cpp  mtl_types.h  mtl_types.h2  (+1 more)
source/lib3d/OpenGL/: gl_buffer.cpp  gl_buffer.h  gl_context.cpp  gl_context.h  gl_device.cpp  gl_device.h  gl_headers.cpp  gl_headers.h  gl_input_layout.cpp  gl_input_layout.h  gl_profile.cpp  gl_profile.h  gl_program.cpp  gl_program.h  gl_shader.cpp  gl_shader.h  gl_texture.cpp  gl_texture.h  gl_types.cpp  gl_types.h
source/lib3d/OpenGLCore/: glcore_types.cpp
source/lib3d/OpenGLES2/: es2_types.cpp
source/libplatform/: CMakeLists.txt  debug.cpp  el_debug.cpp  el_debug.h  el_image.cpp  el_math.h  el_platform.h  el_types.h  el_utility.cpp  el_utility.h  image.cpp  utility.cpp
source/mtlpp/: 05_effect.cpp
src/: main.vert
temp2/: MoltenGLShaderConverter  glslangValidator  msl_vs  (+18 more)
(+28 files in other folders)
